TestSuite/PascalABCTests/errors/err0281.pas
type TClass = static class
end;

TGen<T> = class
end;

begin
var o: TGen<TClass>;
end.